[gd_scene load_steps=24 format=3 uid="uid://b35yprvwfqx1l"]

[ext_resource type="Script" path="res://player/player.gd" id="1_iol46"]
[ext_resource type="PackedScene" uid="uid://bsx6hvpqr2hd4" path="res://player/slimeTrail/slime_trail_area.tscn" id="3_q1qhi"]
[ext_resource type="Texture2D" uid="uid://bp0m7witbkjsm" path="res://player/assets/pixelSlime80x64FinalV1.png" id="3_xpvp5"]
[ext_resource type="Resource" uid="uid://dbejhsudfq7e1" path="res://player/movementData/baseMovement.tres" id="4_3kdex"]
[ext_resource type="Script" path="res://player/stateMachine/StateMachine.gd" id="4_nywrc"]
[ext_resource type="Script" path="res://player/stateMachine/Idle.gd" id="4_syt1c"]
[ext_resource type="Script" path="res://player/stateMachine/Run.gd" id="5_2xcmb"]
[ext_resource type="Script" path="res://player/stateMachine/Air.gd" id="6_uukb8"]
[ext_resource type="PackedScene" uid="uid://b67oe0k12fjv0" path="res://screens/pauseMenu/pause_menu.tscn" id="7_cdj0g"]
[ext_resource type="Script" path="res://player/stateMachine/GroundPound.gd" id="8_f0ll7"]
[ext_resource type="Script" path="res://player/stateMachine/WallSlide.gd" id="9_ymp57"]
[ext_resource type="PackedScene" uid="uid://c626x4l3qqrqa" path="res://player/assets/slime_blob.tscn" id="10_4ehw2"]
[ext_resource type="Script" path="res://player/SlimeDash.gd" id="11_n4y3q"]

[sub_resource type="RectangleShape2D" id="RectangleShape2D_tcaqm"]

[sub_resource type="Animation" id="Animation_sfek8"]
resource_name = "DoubleJumpSpin"
length = 0.25
step = 0.01
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Sprite:rotation")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.25),
"transitions": PackedFloat32Array(1, 1),
"update": 0,
"values": [0.0, 6.28319]
}

[sub_resource type="Animation" id="Animation_1d5yu"]
resource_name = "GroundPoundInit"
length = 0.25
step = 0.01
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Sprite:rotation")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.25),
"transitions": PackedFloat32Array(1, 1),
"update": 0,
"values": [0.0, 6.28319]
}
tracks/1/type = "method"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("StateMachine/GroundPound")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0.25),
"transitions": PackedFloat32Array(1),
"values": [{
"args": [],
"method": &"move_ground_pound"
}]
}

[sub_resource type="Animation" id="Animation_28wjt"]
resource_name = "GroundPoundLand"
length = 0.3
step = 0.01
tracks/0/type = "method"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("StateMachine/GroundPound")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0.299735),
"transitions": PackedFloat32Array(1),
"values": [{
"args": [],
"method": &"end_ground_pound"
}]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("Sprite:position")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0, 0.09, 0.17, 0.25, 0.3),
"transitions": PackedFloat32Array(1, 1, 1, 1, 1),
"update": 0,
"values": [Vector2(0, -1), Vector2(0, 3.224), Vector2(0, 6), Vector2(0, 6), Vector2(0, -1)]
}
tracks/2/type = "value"
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/path = NodePath("Sprite:scale")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/keys = {
"times": PackedFloat32Array(0, 0.09, 0.17, 0.25, 0.3),
"transitions": PackedFloat32Array(1, 1, 1, 1, 1),
"update": 0,
"values": [Vector2(0.347, 0.347), Vector2(0.486, 0.21175), Vector2(0.6875, 0.125), Vector2(0.6875, 0.125), Vector2(0.347, 0.347)]
}

[sub_resource type="Animation" id="Animation_4nlaf"]
length = 0.001
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Sprite:rotation")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [6.28319]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("Sprite:position")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [Vector2(0, -1)]
}
tracks/2/type = "value"
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/path = NodePath("Sprite:scale")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [Vector2(0.347, 0.347)]
}

[sub_resource type="AnimationLibrary" id="AnimationLibrary_571yh"]
_data = {
"DoubleJumpSpin": SubResource("Animation_sfek8"),
"GroundPoundInit": SubResource("Animation_1d5yu"),
"GroundPoundLand": SubResource("Animation_28wjt"),
"RESET": SubResource("Animation_4nlaf")
}

[sub_resource type="RectangleShape2D" id="RectangleShape2D_48n1e"]

[sub_resource type="RectangleShape2D" id="RectangleShape2D_v41k6"]

[sub_resource type="RectangleShape2D" id="RectangleShape2D_x8jpl"]

[sub_resource type="RectangleShape2D" id="RectangleShape2D_smmg1"]

[node name="Player" type="CharacterBody2D" groups=["Player"]]
collision_layer = 3
collision_mask = 3
floor_block_on_wall = false
floor_snap_length = 3.0
platform_floor_layers = 4294901761
script = ExtResource("1_iol46")
movement_data = ExtResource("4_3kdex")
slime_trail_collision = ExtResource("3_q1qhi")

[node name="Sprite" type="Sprite2D" parent="."]
position = Vector2(0, -1)
rotation = 6.28319
scale = Vector2(0.347, 0.347)
texture = ExtResource("3_xpvp5")

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
shape = SubResource("RectangleShape2D_tcaqm")

[node name="AnimationPlayer" type="AnimationPlayer" parent="."]
libraries = {
"": SubResource("AnimationLibrary_571yh")
}

[node name="Camera2D" type="Camera2D" parent="."]
offset = Vector2(0, -50)
zoom = Vector2(3, 3)
position_smoothing_enabled = true

[node name="PauseMenu" parent="." instance=ExtResource("7_cdj0g")]

[node name="Timers" type="Node" parent="."]

[node name="JumpBuffer" type="Timer" parent="Timers"]
wait_time = 0.2
one_shot = true

[node name="CoyoteJumpTimer" type="Timer" parent="Timers"]
wait_time = 0.2
one_shot = true

[node name="SlimeDashTimer" type="Timer" parent="Timers"]
wait_time = 0.5
one_shot = true

[node name="StateMachine" type="Node" parent="." node_paths=PackedStringArray("starting_state")]
script = ExtResource("4_nywrc")
starting_state = NodePath("Idle")

[node name="Idle" type="Node" parent="StateMachine" node_paths=PackedStringArray("air_state", "run_state")]
script = ExtResource("4_syt1c")
air_state = NodePath("../Air")
run_state = NodePath("../Run")

[node name="Run" type="Node" parent="StateMachine" node_paths=PackedStringArray("idle_state", "air_state", "slime_dash_state")]
script = ExtResource("5_2xcmb")
idle_state = NodePath("../Idle")
air_state = NodePath("../Air")
slime_dash_state = NodePath("../SlimeDash")

[node name="Air" type="Node" parent="StateMachine" node_paths=PackedStringArray("idle_state", "run_state", "ground_pound_state", "wall_slide_state")]
script = ExtResource("6_uukb8")
idle_state = NodePath("../Idle")
run_state = NodePath("../Run")
ground_pound_state = NodePath("../GroundPound")
wall_slide_state = NodePath("../WallSlide")
slime_blob = ExtResource("10_4ehw2")

[node name="GroundPound" type="Node" parent="StateMachine" node_paths=PackedStringArray("idle_state", "run_state", "air_state")]
script = ExtResource("8_f0ll7")
idle_state = NodePath("../Idle")
run_state = NodePath("../Run")
air_state = NodePath("../Air")

[node name="WallSlide" type="Node" parent="StateMachine" node_paths=PackedStringArray("idle_state", "run_state", "air_state", "ground_pound_state")]
script = ExtResource("9_ymp57")
idle_state = NodePath("../Idle")
run_state = NodePath("../Run")
air_state = NodePath("../Air")
ground_pound_state = NodePath("../GroundPound")

[node name="SlimeDash" type="Node" parent="StateMachine" node_paths=PackedStringArray("idle_state", "air_state", "run_state")]
script = ExtResource("11_n4y3q")
idle_state = NodePath("../Idle")
air_state = NodePath("../Air")
run_state = NodePath("../Run")

[node name="LedgePushDetection" type="Node" parent="."]

[node name="LeftInner" type="RayCast2D" parent="."]
position = Vector2(5, 0)
target_position = Vector2(0, -15)

[node name="LeftOuter" type="RayCast2D" parent="."]
position = Vector2(10, 0)
target_position = Vector2(0, -15)

[node name="RightInner" type="RayCast2D" parent="."]
position = Vector2(-5, 0)
target_position = Vector2(0, -15)

[node name="RightOuter" type="RayCast2D" parent="."]
position = Vector2(-10, 0)
target_position = Vector2(0, -15)

[node name="WallDetection" type="Node" parent="."]

[node name="LeftWall" type="RayCast2D" parent="."]
target_position = Vector2(11, 0)

[node name="RightWall" type="RayCast2D" parent="."]
target_position = Vector2(-11, 0)

[node name="SlimeTrailDetectors" type="Node" parent="."]

[node name="RightFloorSlime" type="Area2D" parent="."]
position = Vector2(5, 5)
collision_layer = 2
collision_mask = 2

[node name="CollisionShape2D" type="CollisionShape2D" parent="RightFloorSlime"]
scale = Vector2(0.4, 0.4)
shape = SubResource("RectangleShape2D_48n1e")

[node name="LeftFloorSlime" type="Area2D" parent="."]
position = Vector2(-5, 5)
collision_layer = 2
collision_mask = 2

[node name="CollisionShape2D" type="CollisionShape2D" parent="LeftFloorSlime"]
scale = Vector2(0.4, 0.4)
shape = SubResource("RectangleShape2D_v41k6")

[node name="RightWallSlime" type="Area2D" parent="."]
position = Vector2(5, -5)
collision_layer = 2
collision_mask = 2

[node name="CollisionShape2D" type="CollisionShape2D" parent="RightWallSlime"]
scale = Vector2(0.4, 0.4)
shape = SubResource("RectangleShape2D_x8jpl")

[node name="LeftWallSlime" type="Area2D" parent="."]
position = Vector2(-5, -5)
collision_layer = 2
collision_mask = 2

[node name="CollisionShape2D" type="CollisionShape2D" parent="LeftWallSlime"]
scale = Vector2(0.4, 0.4)
shape = SubResource("RectangleShape2D_smmg1")
